minor style tweaks and fix footer overspill issue

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -74,7 +74,7 @@
     background-color: #F2D541;
     border: 6px solid;
     border-radius: 10px;
-    margin: 2%;
+    /* margin: 2%; */
     height: auto;
     padding: 20px;
 }
